# rive-android-fork-dec25

./: .gitignore  build.gradle  gradle.properties  settings.gradle
.clinerules/: workspace_description.md
aidata/: t4_logoutput.md
aidocs/: updating_local_repo_after_merge_from_upstream.md
aiplans/: compose_multiplatform_android_plus_desktop_plan.md  cpp_signatures_mismatches.md  ideas_skia_backend_for_sprite_scene_renderer.md  mprenderer.md  mprive_and_mpapp_consolidate_plan.md  mprive_android_plus_desktop_plan.md  mprive_commandqueue_architecture_analysis.md  mprive_commandqueue_consolidated_plan.md  mprive_commandqueue_revised_plan.md  mprive_image_decoders.md  mprive_phase0_commandqueue_bridge_plan.md  mprive_possible_skia_backend_for_sprite_scene_renderer.md  mprive_testing_strategy.md  mprive_vs_kotlin_rivefile_comparison.md  p1_events_support_and_demo.md  rive-sprite-batch-rendering-optimization.md  rive-sprite-props-implementation.md  rive-sprite-scene-implementation.md
aiplans/archived/: mprive_commandqueue_revised_plan.md
aitasks/: e1_asset_management_cpp_implementation.md  t1_merge_commandqueue_bridge.md  t2_independent_rive_runtime_for_mprive.md  t3_crash_when_running_demoapp.md  t4_solve_greybox_rendering.md  t5_statemachine_skipframes_optimizations.md  t6_remove_diagnostics_loggings.md
aitasks/archived/: t4_solve_greybox_rendering.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/app/rive/runtime/example/: MainActivity.kt
app/src/main/res/layout/: main.xml
docs/: README_building_the_project.md  how_to_compile_and_run_local_changes.md  merged_upstream_changes_jan_2026.md  mprive_platform_support.md  readme_rive_viewmodel.md  sprite_batch_rendering.md
gradle/: fork.versions.toml
kotlin/: build.gradle
kotlin/src/main/cpp/include/: bindings_command_queue.hpp
kotlin/src/main/cpp/src/bindings/: bindings_command_queue.cpp  bindings_command_queue_assets.cpp  bindings_command_queue_core.cpp  bindings_command_queue_file.cpp  bindings_command_queue_rendering.cpp  bindings_command_queue_statemachine.cpp  bindings_command_queue_viewmodel.cpp
kotlin/src/main/kotlin/app/rive/core/: CommandQueue.kt  CommandQueueBridge.kt
kotlin/src/main/kotlin/app/rive/sprites/: IRiveSprite.kt  RiveSprite.kt  RiveSpriteScene.kt  RiveSpriteSceneRenderer.kt  SpriteOrigin.kt  SpriteRenderMode.kt  SpriteScale.kt  SpriteTag.kt  SpriteViewModelConfig.kt
kotlin/src/main/kotlin/app/rive/sprites/matrix/: TransMatrix.kt  TransMatrixData.kt
kotlin/src/main/kotlin/app/rive/sprites/props/: DiscoveredProps.kt  PropertyMatchMode.kt  PropertyMatcher.kt  SpriteControlProp.kt  SpriteControlPropFactory.kt
mpapp/: build.gradle.kts
mpapp/src/androidMain/: AndroidManifest.xml
mpapp/src/androidMain/kotlin/app/rive/mpapp/: MainActivity.kt
mpapp/src/commonMain/kotlin/app/rive/mpapp/: App.kt  DemoRiveFiles.kt  RiveDemo.kt
mpapp/src/desktopMain/kotlin/app/rive/mpapp/: main.kt
mpapp/src/iosMain/kotlin/app/rive/mpapp/: MainViewController.kt
mpapp/src/wasmJsMain/kotlin/app/rive/mpapp/: main.kt
mprive/: build.gradle.kts
mprive/src/androidInstrumentedTest/: AndroidManifest.xml
mprive/src/androidMain/: AndroidManifest.xml
mprive/src/androidMain/cpp/: CMakeLists.txt  premake5_cpp_runtime.lua
mprive/src/androidMain/cpp/helpers/: android_factory.cpp  android_factory.hpp  image_decode.cpp  image_decode.hpp  render_context_android.cpp
mprive/src/androidMain/cpp/src/: mprive_jni.cpp
mprive/src/androidMain/kotlin/app/rive/mp/: Artboard.android.kt  MpRive.android.kt  RenderContext.android.kt  RiveFile.android.kt  RiveLog.android.kt  RiveNative.android.kt
mprive/src/androidMain/kotlin/app/rive/mp/compose/: Rive.android.kt  RiveTypes.android.kt
mprive/src/androidMain/kotlin/app/rive/mp/core/: CommandQueueBridge.android.kt  (+1 more)
mprive/src/androidMain/kotlin/app/rive/mprive/: RivePlatform.android.kt
mprive/src/commonMain/kotlin/app/rive/mp/: Animation.kt  Artboard.kt  CommandQueue.kt  Errors.kt  Handles.kt  InputType.kt  MpRive.kt  PropertyTypes.kt  RefCounted.kt  RenderContext.kt  RiveFile.kt  RiveLog.kt  RiveNative.kt  RiveSurface.kt  RiveUI_ExperimentalAPI.kt  RiveUI_Result.kt  StateMachine.kt  ViewModelInstance.kt
mprive/src/commonMain/kotlin/app/rive/mprive/: RivePlatform.kt
mprive/src/desktopMain/kotlin/app/rive/mp/: Artboard.desktop.kt  MpRive.desktop.kt  RenderContext.desktop.kt  RiveFile.desktop.kt  RiveLog.desktop.kt  RiveNative.desktop.kt
mprive/src/desktopMain/kotlin/app/rive/mprive/: RivePlatform.desktop.kt
mprive/src/iosMain/kotlin/app/rive/mp/: Artboard.ios.kt  MpRive.ios.kt  RiveFile.ios.kt  RiveLog.ios.kt  RiveNative.ios.kt
mprive/src/iosMain/kotlin/app/rive/mprive/: RivePlatform.ios.kt
mprive/src/nativeInterop/cpp/include/: bindings_commandqueue_internal.hpp  command_server.hpp  command_server_types.hpp  jni_helpers.hpp  jni_refs.hpp  platform.hpp  render_buffer.hpp  render_context.hpp  rive_event.hpp  rive_log.hpp
mprive/src/nativeInterop/cpp/src/bindings/: bindings_commandqueue.cpp  bindings_commandqueue_animation.cpp  bindings_commandqueue_assets.cpp  bindings_commandqueue_core.cpp  bindings_commandqueue_file.cpp  bindings_commandqueue_list.cpp  bindings_commandqueue_rendering.cpp  bindings_commandqueue_statemachine.cpp  bindings_commandqueue_viewmodel.cpp  bindings_file.cpp  bindings_init.cpp  bindings_rendercontext.cpp
mprive/src/nativeInterop/cpp/src/command_server/: command_server.cpp  command_server_animation.cpp  command_server_artboard.cpp  command_server_assets.cpp  command_server_core.cpp  command_server_file.cpp  command_server_list.cpp  command_server_pointer.cpp  command_server_properties.cpp  command_server_render.cpp  command_server_statemachine.cpp  command_server_vmi.cpp
mprive/src/nativeInterop/cpp/src/jni_common/: jni_helpers.cpp  jni_refs.cpp  render_buffer.cpp  rive_log.cpp
mprive/src/wasmJsMain/kotlin/app/rive/mp/: Artboard.wasmjs.kt  MpRive.wasmJs.kt  RiveFile.wasmjs.kt  RiveLog.wasmJs.kt  RiveNative.wasmjs.kt
mprive/src/wasmJsMain/kotlin/app/rive/mprive/: RivePlatform.wasmjs.kt
(+63 files in other folders)
